@@ -1,5 +1,5 @@
 <?php
-// $Id: file_test.module,v 1.14 2009-08-29 06:57:27 dries Exp $
+// $Id: file_test.module,v 1.15 2009-08-31 05:47:34 dries Exp $
 
 /**
  * @file
@@ -312,6 +312,21 @@ function file_test_file_url_alter(&$uri) {
       $uri = FILE_URL_TEST_CDN_2 . '/' . $path;
     }
   }
+}
+
+/**
+ * Implementation of hook_file_mimetype_mapping_alter().
+ */
+function file_test_file_mimetype_mapping_alter(&$mapping) {
+  // Add new mappings.
+  $mapping['mimetypes']['file_test_mimetype_1'] = 'madeup/file_test_1';
+  $mapping['mimetypes']['file_test_mimetype_2'] = 'madeup/file_test_2';
+  $mapping['mimetypes']['file_test_mimetype_3'] = 'madeup/doc';
+  $mapping['extensions']['file_test_1'] = 'file_test_mimetype_1';
+  $mapping['extensions']['file_test_2'] = 'file_test_mimetype_2';
+  $mapping['extensions']['file_test_3'] = 'file_test_mimetype_2';
+  // Override existing mapping.
+  $mapping['extensions']['doc'] = 'file_test_mimetype_3';
 }
 
 /**
