@@ -1,5 +1,5 @@
 <?php
-// $Id: upload.test,v 1.25 2009-08-22 19:30:41 webchick Exp $
+// $Id: upload.test,v 1.26 2009-08-31 05:47:34 dries Exp $
 
 /**
  * @file
@@ -207,7 +207,6 @@ class UploadTestCase extends DrupalWebTestCase {
    * @param string $filename Name of file to verify.
    */
   function checkUploadedFile($filename) {
-    global $base_url;
     $file = 'public://' . $filename;
     $this->drupalGet(file_create_url($file), array('external' => TRUE));
     $this->assertResponse(array(200), 'Uploaded ' . $filename . ' is accessible.');
